--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Ignore Python bytecode files
-*.pyc
-*.pyo
-*.pyd
-
-# Ignore Python cache directories
-__pycache__/
-*.pytest_cache/
+# Ignore Python cache directories and files
+**/__pycache__/
+**/.pytest_cache/
+**/*.pyc
+**/*.pyo
+**/*.pyd
