--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,11 +1,6 @@
 fastapi[all]
-
-facebook_scraper 
-
-loguru 
-
-sqlalchemy 
-
-pandas 
-
-Pytest
+facebook_scraper
+loguru
+sqlalchemy
+pandas
+pytest
