--- a/Dockerfile.telegram
+++ b/Dockerfile.telegram
@@ -10,9 +10,5 @@ COPY . /app
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Define environment variable
-ENV DATABASE_URL="sqlite:///mydatabase.db"
-
-# Run the command to execute the tests
-CMD ["python", "app.py"]
-
+# Run the command to execute the file
+CMD ["python", "telegrambotApp.py"]
